# parquet_viewer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
scripts/: fetch-duckdb.sh  gen-testdata.sh  gen_i18n_parquet.c
src/: app.c  app.h  buf.c  buf.h  layout.h  main.c  model.h  navigate.c  navigate.h  render.c  render.h  source.c  source.h  sql.c  sql.h  terminal.c  terminal.h  util.c  util.h
testdata/: i18n.parquet
tests/: test_app.c  test_buf.c  test_i18n.c  test_navigate.c  test_render.c  test_sql.c  test_util.c
